Prevent output log from overflowing

--- a/index.css
+++ b/index.css
@@ -131,6 +131,8 @@
 }
 
 .executerContainer {
+    display: flex;
+    flex-direction: column;
     position: fixed;
     left: 67%;
     top: 0;
@@ -142,9 +144,9 @@
 }
 
 .executerContainer .outputLog {
+    flex-grow: 1;
     padding: 8px;
     font-family: monospace;
-    max-height: calc(100vh - 120px);
     overflow: auto;
 }
 
